# u1kit

./: .gitattributes  .gitignore  CLAUDE.md  DECISIONS.md  README.md  phase-one.md  phase-three-plan.md  phase-two.md  pyproject.toml  u1.3mf  u1kit — Phased Development PRD draft 1.md  u1kit — Rule & Fixer Spec (v0 draft).md
.claude/: settings.local.json
.github/workflows/: gui-ci.yml  release.yml
docs/: install.md
gui/: eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
gui/src/: App.integration.test.tsx  App.test.tsx  App.tsx  main.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: build_sidecar.py
tests/: conftest.py  test_archive_roundtrip.py  test_b1_fixer.py  test_bbl.py  test_cli.py  test_cli_sidecar.py  test_color.py  test_e2e.py  test_filaments.py  test_fixers.py  test_geometry.py  test_interactive.py  test_mixed_blends.py  test_phase2_e2e.py  test_rules.py
u1kit/: __init__.py  __main__.py  archive.py  bbl.py  cli.py  color.py  config.py  filaments.py  geometry.py  interactive.py  mixed_blends.py  report.py
u1kit/data/: u1_printer_reference.json  u1_toolchange.gcode
u1kit/fixers/: __init__.py  a2_printer_profile.py  a3_bambu_macros.py  b1_filament_count.py  b2_filament_mapping.py  b3_bbl_fields.py  b4_flexible_speed_caps.py  b5_flexible_support.py  base.py  c1_bed_temp_conflict.py  c2_first_layer_bed_temp.py  c3_slow_down_layer_time.py  d1_mixed_height_bounds.py  d2_z_hop_magnitude.py  e3_prime_tower_brim.py
u1kit/presets/: bambu_to_u1.yaml  fs_uniform.yaml  makerworld_import.yaml  (+2 more)
(+73 files in other folders)
